philly-311-citywide-meta/src/objects/SubscribeArticle__c.object
<CustomObject>
    <fields>
        <fullName>ArticleID__c</fullName>
        <label>ArticleID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>ContactNumber</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserProfileID__c</fullName>
        <description>Id of the user who has subscribed to the article .</description>
        <label>UserProfileID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <label>SubscribeArticle</label>
    <nameField>
        <label>SubscribeArticle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubscribeArticle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>